--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,7 @@ node_modules
 # Hardhat Ignition default folder for deployments against a local node
 ignition/deployments/chain-31337
 /node_modules
+
+# Text files
 rough.txt
+gas-report.txt
