--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "chai": "^4.4.1",
     "ethereum-waffle": "^4.0.10",
     "ethers": "^6.13.1",
-    "hardhat": "^2.22.6",
+    "hardhat": "^2.22.9",
+    "hardhat-deploy": "^0.12.4",
     "hardhat-gas-reporter": "^1.0.10",
     "solidity-coverage": "^0.8.12",
     "ts-node": "^10.9.2",
